# bond

./: Makefile  pyproject.toml
VD_games/: cli.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_main.ру  VD_progression.py  VD_simple.ру
my_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
