[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games-project-bondarenko"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "VD games project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-calc = "VD_games.scripts.VD_calc:run_calc_game"
VD-gcd = "VD_games.scripts.VD_gcd:run_NOD_game"
VD-even = "VD_games.scripts.VD_even:run_even_game"
VD-progression = "VD_games.scripts.VD_progression:run_progression_game"
VD-simple = "VD_games.scripts.VD_simple:run_simple_game"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
